Updated desktop to get rid of status update bug upon server login. Updated server to prevent background tasks from running on a non set up server. Renamed data directory that the server creates so it is not hidden